<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#dd2c00"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parenthesisBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="openBracket"
                android:text="("
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="closedBracket"
                android:text=")"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBtm"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideBtn"
                android:text="@string/divide"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBtn"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBtn"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBtn"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBtn"
                android:text="@string/multiply"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBtn"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBtn"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBtn"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractBtn"
                android:text="@string/subtract"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneBtn"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBtn"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBtn"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addBtn"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/exponent"
                android:textColor="#ffffff"
                android:onClick="exponentBtn"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="pointBtn"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#43A047"
                android:onClick="equalBtn"
                android:text="@string/equal"
                android:textColor="#ffffff"

                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceBtn"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/share_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle"
        android:text="Share the Result"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>